--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "modern-normalize": "^2.0.0",
-    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -32,5 +35,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0"
-  }
+  },
+  "author": "Volodymyr Shorobura"
 }
