--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "helmet": "^7.1.0",
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.5",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux-persist": "^6.0.0",
